--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.2.4",
+    "qrcode.react": "^3.1.0",
     "razorpay": "^2.9.4",
     "react": "^18",
     "react-dom": "^18"
