--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "qrcode.react": "^3.1.0",
     "razorpay": "^2.9.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
